# InfraChemTracker

./: .replit  README.md  __init__.py  app.py  app.py.bak  app.py.bak2  auth.py  auto_kpi_generator.py  check_non_po_regions.py  check_regions.py  clear_all_data.py  custom_js.py  data_cleaner.py  data_cleanup.py  data_processor.py  data_storage.py  database.py  debug_app_data.py  debug_credit_values.py  debug_po_count.py  debug_regions.py  delete_user.py  direct_tab_fix.py  example_data.json  fixed_dashboard.py  industrial_auth_theme.py  industrial_theme.py  inspect_excel.py  inspect_excel_columns.py  inspect_po_data.py  interactive_analysis.py  matrix_auth_theme.py  minimalist_auth_theme.py  minimalist_login_css.txt  minimalist_login_theme.py  minimalist_theme.py  monograph_theme.py  pdf_export.py  pyproject.toml  read_excel.py  (+27 more)
report_processors/: __init__.py  chemical_spend_by_supplier.py
