[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.15.2",
    "anthropic>=0.51.0",
    "fpdf>=1.7.2",
    "fuzzywuzzy>=0.18.0",
    "lxml>=5.3.1",
    "numpy>=2.2.4",
    "odfpy>=1.4.1",
    "openai>=1.78.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "psycopg2-binary>=2.9.10",
    "python-levenshtein>=0.27.1",
    "reportlab>=4.4.0",
    "sqlalchemy>=2.0.40",
    "statsmodels>=0.14.4",
    "streamlit>=1.43.2",
    "toml>=0.10.2",
    "weasyprint>=65.1",
    "xlrd>=2.0.1",
]
